<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.rickandmortyquiz.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.rickandmortyquiz.GameFragment"
        android:label="@string/quiztime"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_gameFragment_to_scoreFragment"
            app:destination="@id/scoreFragment"
            app:popUpTo="@id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/scoreFragment"
        android:name="com.example.rickandmortyquiz.score.ScoreFragment"
        android:label="@string/gameover"
        tools:layout="@layout/fragment_score" >
        <argument
            android:name="score"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/AboutFragment"
        android:name="com.example.rickandmortyquiz.about.AboutFragment"
        android:label="@string/aboutRM"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.example.rickandmortyquiz.rules.RulesFragment"
        android:label="@string/rules"
        tools:layout="@layout/fragment_rules" />
</navigation>